se modifico, abre las pestañas de contac y nos

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a href="index.html">Inicio</a>
             <a href="carrusel.html">Productos</a>
             <a href="#ofertas">Ofertas</a>
-            <a href="#sobre nosotros">Sobre nosotros</a>
-            <a href="#contacto">Contacto</a>
+            <a href="nosotros.html">Sobre nosotros</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
 
         <div class="icons">
