--- a/login.html
+++ b/login.html
@@ -21,13 +21,11 @@
         <nav class="navbar">
             <a href="index.html">Inicio</a>
             <a href="carrusel.html">Productos</a>
-            <a href="#ofertas">Ofertas</a>
-            <a href="#sobre nosotros">Sobre nosotros</a>
-            <a href="#contacto">Contacto</a>
+            <a href="nosotros.html">Sobre nosotros</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
 
         <div class="icons">
-            <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-shopping-cart"></a>
             <a href="login.html" class="fas fa-user"></a>
         </div>
@@ -61,8 +59,6 @@
                 <!-- registro -->
                 <form action="" class="formulario__register">
                     <h2>Registrarse</h2>
-                    <input type="text" placeholder="Nombre">
-                    <input type="text" placeholder="Apellido">
                     <input type="text" placeholder="Correo Electrónico">
                     <input type="text" placeholder="Nombre de Usuario">
                     <input type="password" placeholder="Contraseña">
