--- a/memorama.html
+++ b/memorama.html
@@ -20,13 +20,11 @@
         <nav class="navbar">
             <a href="index.html">Inicio</a>
             <a href="carrusel.html">Productos</a>
-            <a href="#ofertas">Ofertas</a>
-            <a href="#sobre nosotros">Sobre nosotros</a>
-            <a href="#contacto">Contacto</a>
+            <a href="nosotros.html">Sobre nosotros</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
 
         <div class="icons">
-            <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-shopping-cart"></a>
             <a href="login.html" class="fas fa-user"></a>
         </div>
